// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/presets/local/index getPreset() forwards to azure 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to bitbucket 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom bitbucket-server 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    "https://git.example.com",
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom gitea 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    "https://api.gitea.example.com",
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom github 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    "https://api.github.example.com",
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom github with a tag 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    "https://api.github.example.com",
    "someTag",
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom gitlab 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    "https://gitlab.example.com/api/v4",
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to custom gitlab with a tag 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    "https://gitlab.example.com/api/v4",
    "someTag",
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to gitea 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to github 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to github with a tag 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    undefined,
    "someTag",
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to gitlab 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    undefined,
    undefined,
  ],
]
`;

exports[`config/presets/local/index getPreset() forwards to gitlab with a tag 1`] = `
[
  [
    "some/repo",
    "default",
    undefined,
    undefined,
    "someTag",
  ],
]
`;
